[gd_scene load_steps=3 format=3 uid="uid://b7rnv4gqf8q7o"]

[ext_resource type="Script" path="res://Stages/UI/tech_tree/tech_tree.gd" id="1_techtree"]
[ext_resource type="Theme" uid="uid://b8k2vgj8hxk5r" path="res://Config/ztd_ui_theme.tres" id="2_theme"]

[node name="TechTree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_techtree")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tech Tree"
theme_override_font_sizes/font_size = 32

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TechGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="DetailPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tech Name"
theme_override_font_sizes/font_size = 24

[node name="DescriptionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tech description goes here"
autowrap_mode = 3

[node name="RequirementsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Requirements:"
autowrap_mode = 3

[node name="UnlocksLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Unlocks:"
autowrap_mode = 3

[node name="UnlockButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Unlock"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Exclusive Choice"
initial_position = 2
size = Vector2i(400, 200)
